; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_difftool.c_ensure_leading_directories.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_difftool.c_ensure_leading_directories.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [45 x i8] c"could not create leading directories of '%s'\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @ensure_leading_directories to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ensure_leading_directories(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = call i32 @safe_create_leading_directories(i8* %4)
  switch i32 %5, label %7 [
    i32 128, label %6
    i32 129, label %6
  ]

6:                                                ; preds = %1, %1
  store i32 0, i32* %2, align 4
  br label %11

7:                                                ; preds = %1
  %8 = call i32 @_(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0))
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @error(i32 %8, i8* %9)
  store i32 %10, i32* %2, align 4
  br label %11

11:                                               ; preds = %7, %6
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}

declare dso_local i32 @safe_create_leading_directories(i8*) #1

declare dso_local i32 @error(i32, i8*) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
